--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,11 +15,12 @@
             <nav>
                 <div class="nav-wrapper">
                 <ul>
-                    <li><a href="/" class="left brand-logo">&nbsp;&nbsp;AimAlign</a></li>
+                    <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;AimAlign</a></li>
                 </ul>
                 <ul class="right">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/goals">View All Goals</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'goals_create' %}">Set a New Goal</a></li>
+                    <li><a href="{% url 'index' %}">View All Goals</a></li>
                 </ul>
                 </div>
             </nav>
