--- a/main_app/templates/goals/detail.html
+++ b/main_app/templates/goals/detail.html
@@ -9,12 +9,44 @@
         <p>DURATION</p>
         <p>Start date: {{ goal.start_date }}</p>
         <p>End date: {{ goal.end_date }}</p>
-        <p>(Checkpoints will go here)</p>
+        <p>Status: {{ goal.get_status_display  }} </p>
+        <p>Status bar will go here</p>
     </div>
+    <div class="card-content">
+        <p>CHECKPOINTS</p>
+        {% for checkpoint in goal.checkpoint_set.all %}
+            <p>{{ checkpoint.title }}</p>
+            <p>Start date: {{ checkpoint.start_date }}</p>
+            <p>End date: {{ checkpoint.end_date }}</p>
+            <p>Status: {{ checkpoint.get_status_display }}</p>
+        {% endfor %}
+    </div>
+    <form action="{% url 'add_checkpoint' goal.id %}" method="POST">
+        {% csrf_token %}
+        {{ checkpoint_form.as_p }}
+        <input type="submit" class="btn" value="Add a Checkpoint">
+    </form>
     <div class="card-action">
         <a href="{% url 'goals_update' goal.id %}">Edit Goal</a>
         <a href="{% url 'goals_delete' goal.id %}">Delete Goal</a>
     </div>
 </div>
+
+<script>
+    const startDateEl = document.getElementById('id_start_date');
+    M.Datepicker.init(startDateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+    const endDateEl = document.getElementById('id_end_date');
+    M.Datepicker.init(endDateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+</script>
 
 {% endblock %}
