added status color and associated logic

--- a/main_app/templates/goals/detail.html
+++ b/main_app/templates/goals/detail.html
@@ -20,11 +20,19 @@
                     <p>{{ checkpoint.title }}</p>
                     <p>Start date: {{ checkpoint.start_date }}</p>
                     <p>End date: {{ checkpoint.end_date }}</p>
-                    <p>Status: {{ checkpoint.get_status_display }}</p>
+                    <div id="status-div">
+                        <div id="status-circle" class="{{ checkpoint.status_color }}"> 
+                        </div>
+                        <p>Status: {{ checkpoint.get_status_display }}</p>
+                    </div>
                 </div>
                 <div class="card-action col s4">
                     <a href="{% url 'checkpoints_update' checkpoint.id %}">Edit Checkpoint</a>
                     <a href="{% url 'checkpoints_delete' checkpoint.id %}">Delete Checkpoint</a>
+                    <form action="{% url 'checkpoints_update_status' checkpoint.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" value="Mark as complete" class="btn">
+                    </form>
                 </div>
             </div>
         {% endfor %}
