--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -16,3 +16,15 @@ footer.page-footer {
     padding-top: 0;
     text-align: right;
 }
+
+#status-div {
+    display: flex;
+    align-items: center;
+}
+
+#status-circle {
+    width: 15px;
+    height: 15px;
+    margin: 0 10px 0 0;
+    border-radius: 20px;
+}
