--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,10 +23,10 @@
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'goals_create' %}">Set a New Goal</a></li>
                         <li><a href="{% url 'index' %}">View All Goals</a></li>
-                        <form method="post" action="{% url 'logout' %}">
+                        <li><form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type="submit">Log Out</button>
-                        </form>
+                        </form></li>
                     {% else %}
                         <li><a href="{% url 'signup' %}">Sign Up</a></li>
                         <li><a href="{% url 'login' %}">Log In</a></li>
