--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Home - AimAlign</h1>
+<div id="home-title">
+    <div id="home-main-title">
+        <h1>Welcome to</h1>
+        <h1 id="aim-top">Aim</h1>
+        <h1 id="align-bottom">Align</h1>
+    </div>
+    <h3>where your goals become reality</h3>
+    <div class="home-bullets">
+        <div class="bullet-points">
+            <img class="target-arrow" id="target-1" src="../static/images/target-arrow.png"/>
+            <h5 id="bullet-1">Easy to use</h5>
+        </div>
+        <div class="bullet-points">
+            <img class="target-arrow" id="target-2" src="../static/images/target-arrow.png"/>
+            <h5 id="bullet-2">Set your own timeline and deadlines</h5>
+        </div>
+        <div class="bullet-points">
+            <img class="target-arrow" id="target-3" src="../static/images/target-arrow.png"/>
+            <h5 id="bullet-3">Be automatically reminded</h5>
+        </div>
+    </div>
+</div>
+
+<div>
+    <p>How to use this website</p>
+</div>
 
 {% endblock %}
