--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,6 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>AimAlign</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
@@ -25,7 +28,7 @@
                         <li><a href="{% url 'index' %}">View All Goals</a></li>
                         <li><form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
-                            <button type="submit">Log Out</button>
+                            <button id="logout-btn" type="submit">Log Out</button>
                         </form></li>
                     {% else %}
                         <li><a href="{% url 'signup' %}">Sign Up</a></li>
