--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,7 +7,7 @@
         <h1 id="aim-top">Aim</h1>
         <h1 id="align-bottom">Align</h1>
     </div>
-    <h3>where your goals become reality</h3>
+    <h3 id="tagline">where your goals become reality</h3>
     <div class="home-bullets">
         <div class="bullet-points">
             <img class="target-arrow" id="target-1" src="../static/images/target-arrow.png"/>
