--- a/main_app/templates/goals/detail.html
+++ b/main_app/templates/goals/detail.html
@@ -30,7 +30,7 @@
                             </div>
                             <p>Status: Complete</p>
                         {% else %}
-                            <div id="status-circle" class="red-accent-3"> 
+                            <div id="status-circle" class="red"> 
                             </div>
                             <p>Status: Incomplete</p>
                         {% endif %}
