--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -20,6 +20,19 @@ nav, footer.page-footer {
     background-color: #7ec835;
 }
 
+#logo-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+}
+
+#logo {
+    width: 50px;
+    height: auto;
+    background-color: white;
+}
+
 main {
     flex: 1 0 auto;
 }
